<resources>
    <string name="app_name">Elie \' s School</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="title_activity_main3">MainActivity</string>

    <string name="title_activity_malia_tech_app">MaliaTechApp</string>
    <string name="title_activity_malia">malia</string>

    <string name="medication_title">Medication Name</string>
    <string name="medication_type">Medication Type</string>
    <string name="instructions">Instructions</string>
    <string name="dosage">Dosage</string>
    <string name="medication_name_hint">e.g.Paracetamol</string>
    <string name="switch_reminder_text">Schedule and Reminder</string>
    <string name="button_confirm">Confirm</string>
    <string name="textview_reminder">Reminder:</string>
    <string name="default_alarm_date">09:00</string>
    <string name="title_activity_main">MainActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_main_menu">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="invalid_firstname">Not valid</string>
    <string name="invalid_lastname">Not valid</string>
    <string name="invalid_birthdate">Not valid</string>

    <string name="preference_file_key">health_db</string>
    <string name="is_logged_in">is_logged_in</string>
    <string name="wrong_credentials">Wrong Credentials</string>
    <string name="user_already_exists">Already exists</string>

</resources>