<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_medication_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Medication Name" />

        <EditText
            android:id="@+id/edittext_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/medication_name_hint"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textview_dosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Dosage : " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#DDDDDD"
                android:inputType="number"
                android:minWidth="92dp"
                android:text="1"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinner_pills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textview_medication_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Medication Type" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_medication_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textview_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Instructions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#DDDDDD"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_reminder_text"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textview_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/textview_reminder"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinner_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Text_View_At"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="At:"
                android:visibility="gone"></TextView>


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_alarm_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />


            <TextView
                android:id="@+id/TextView_ON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="ON :"
                android:visibility="gone" />

            <TextView
                android:id="@+id/TVSelectedDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Recylerview_day_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Recylerview_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:id="@+id/start_Text_View"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Start"
        android:visibility="gone"
        ></TextView>

            <CalendarView
                android:id="@+id/simpleCalendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:firstDayOfWeek="2"
                android:maxDate="01/01/2023"
                android:minDate="01/01/2018"


></CalendarView>

</LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:id="@+id/end_Text_View"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="End"

                    ></TextView>

            <CalendarView
                android:id="@+id/simple1CalendarView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:firstDayOfWeek="2"
                android:maxDate="01/01/2023"
                android:minDate="01/01/2018"

                ></CalendarView>

            </LinearLayout>

            <CheckBox
                android:id="@+id/repeat_Check_Box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repeat weekly (no end date)"
                android:visibility="gone">

            </CheckBox>


        </LinearLayout>


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>