<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_medication_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Medication Name" />

        <Spinner
            android:id="@+id/medicinesList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            ></Spinner>

        <TextView
            android:id="@+id/nameOfMedicine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"


            ></TextView>

        <TextView
            android:id="@+id/textview_dosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Dosage : " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#DDDDDD"
                android:hint="1"
                android:inputType="number"
                android:minWidth="92dp"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinner_pills"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textview_medication_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Medication Type" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_medication_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textview_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Instructions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#DDDDDD"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_reminder_text"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textview_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/textview_reminder"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinner_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/Text_View_At"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="At:"
                android:visibility="gone" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_alarm_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:visibility="gone" />


            <TextView
                android:id="@+id/TextView_ON"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="ON :"
                android:visibility="gone" />


            <TextView
                android:id="@+id/TVSelectedDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Recylerview_day_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/Recylerview_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/btn1_timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From"
                android:textSize="16dp"
                android:visibility="gone"

                ></Button>

            <TextView
                android:id="@+id/tv_textTime1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Start Date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"

                >

            </TextView>

            <Button
                android:id="@+id/btn2_timePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To"
                android:textSize="16dp"
                android:visibility="gone"

                ></Button>

            <TextView
                android:id="@+id/tv_textTime2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="End Date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"

                >

            </TextView>


            <CheckBox
                android:id="@+id/repeat_Check_Box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repeat weekly (no end date)"
                android:visibility="gone">

            </CheckBox>


        </LinearLayout>


        <Button
            android:id="@+id/btnConfirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>