<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label="Medications">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textview_medicationName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Medication Name" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingVertical="8dp">

        <Spinner
            android:id="@+id/spinner_medicinesList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
/>

        <EditText
            android:id="@+id/edittext_nameOfMedicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
/>

            <Button
                android:id="@+id/button_addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="Add"/>

        </LinearLayout>

        <TextView
            android:id="@+id/textview_nameOfDiseaseTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Diagnosis"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingVertical="8dp">

        <Spinner
            android:id="@+id/spinner_conditionsSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
/>
        <TextView
            android:id="@+id/textview_nameOfCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
/>
    </LinearLayout>

        <TextView
            android:id="@+id/textview_dosage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Dosage : " />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/edittext_dosage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#DDDDDD"
                android:inputType="number"
                android:minWidth="92dp"
                android:hint="1"
                android:textAlignment="center" />

            <Spinner
                android:id="@+id/spinner_pillsSpinner"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/textview_medicationType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Medication Type" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_medicationType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp">

        </androidx.recyclerview.widget.RecyclerView>

        <TextView
            android:id="@+id/textview_instructions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            tools:text="Instructions" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerview_instructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="#DDDDDD"
            android:orientation="vertical"
            android:padding="16dp">

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/switch_reminder"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/switch_reminder_text"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/textview_reminder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/textview_reminder"
                android:visibility="gone" />

            <Spinner
                android:id="@+id/spinner_timeSpinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/textview_At"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="At:"
                android:visibility="gone" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview_alarmCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:visibility="gone" />



            <TextView
                android:id="@+id/textview_On"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="ON :"
                android:visibility="gone" />


            <TextView
                android:id="@+id/textview_selectedDays"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylerview_dayCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:visibility="gone" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recylerview_day"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Button
                android:id="@+id/button_timePickerBtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="From"
                android:textSize="16dp"
                android:visibility="gone"
/>
            <TextView
                android:id="@+id/textview_dateOfBirthday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="Start Date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
/>
            <Button
                android:id="@+id/button_timePickerbtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="To"
                android:textSize="16dp"
                android:visibility="gone"
/>

            <TextView
                android:id="@+id/textview_textTime2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:text="End Date"
                android:textSize="16sp"
                android:textStyle="bold"
                android:visibility="gone"
/>

            <CheckBox
                android:id="@+id/checkbox_repeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Repeat weekly (no end date)"
                android:visibility="gone">
            </CheckBox>

        </LinearLayout>

        <Button
            android:id="@+id/button_confirmbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_confirm"
            />
    </LinearLayout>

</androidx.core.widget.NestedScrollView>